refactor: global 패키지 코드 품질 개선 및 설정 파일 최적화